syntax = "proto3";

package user;
option go_package="./user";

// 用户服务接口定义
service User {
    // 用户注册
    rpc Register(RegisterRequest) returns (RegisterResponse);
    // 用户登录
    rpc Login(LoginRequest) returns (LoginResponse);
    // 获取用户信息
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
    // 更新用户信息
    rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoResponse);
    // 修改密码
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
    // 重置密码
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
    // 地址管理
    rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
    rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
    rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse);
    rpc ListAddress(ListAddressRequest) returns (ListAddressResponse);
    // 钱包操作
    rpc GetWalletBalance(GetWalletBalanceRequest) returns (GetWalletBalanceResponse);
    rpc RechargeWallet(RechargeWalletRequest) returns (RechargeWalletResponse);
    rpc WithdrawWallet(WithdrawWalletRequest) returns (WithdrawWalletResponse);
}

// 注册请求
message RegisterRequest {
    string username = 1;
    string password = 2;
    string phone = 3;
    string email = 4;
}

message RegisterResponse {
    int64 user_id = 1;
    string token = 2;
}

// 登录请求
message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int64 user_id = 1;
    string token = 2;
    UserInfo user_info = 3;
}

// 用户信息
message UserInfo {
    int64 user_id = 1;
    string username = 2;
    string nickname = 3;
    string avatar = 4;
    string phone = 5;
    string email = 6;
    int32 gender = 7;
    int32 member_level = 8;
    double wallet_balance = 9;
    int64 created_at = 10;
    int64 updated_at = 11;
}

// 获取用户信息请求
message GetUserInfoRequest {
    int64 user_id = 1;
}

message GetUserInfoResponse {
    UserInfo user_info = 1;
}

// 更新用户信息请求
message UpdateUserInfoRequest {
    int64 user_id = 1;
    string nickname = 2;
    string avatar = 3;
    int32 gender = 4;
    string phone = 5;
    string email = 6;
}

message UpdateUserInfoResponse {
    bool success = 1;
}

// 修改密码请求
message ChangePasswordRequest {
    int64 user_id = 1;
    string old_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse {
    bool success = 1;
}

// 重置密码请求
message ResetPasswordRequest {
    string phone = 1;
    string verify_code = 2;
    string new_password = 3;
}

message ResetPasswordResponse {
    bool success = 1;
}

// 地址管理
message Address {
    int64 id = 1;
    int64 user_id = 2;
    string receiver_name = 3;
    string receiver_phone = 4;
    string province = 5;
    string city = 6;
    string district = 7;
    string detail_address = 8;
    bool is_default = 9;
    int64 created_at = 10;
    int64 updated_at = 11;
}

message AddAddressRequest {
    int64 user_id = 1;
    string receiver_name = 2;
    string receiver_phone = 3;
    string province = 4;
    string city = 5;
    string district = 6;
    string detail_address = 7;
    bool is_default = 8;
}

message AddAddressResponse {
    int64 address_id = 1;
}

message UpdateAddressRequest {
    int64 address_id = 1;
    string receiver_name = 2;
    string receiver_phone = 3;
    string province = 4;
    string city = 5;
    string district = 6;
    string detail_address = 7;
    bool is_default = 8;
}

message UpdateAddressResponse {
    bool success = 1;
}

message DeleteAddressRequest {
    int64 address_id = 1;
    int64 user_id = 2;
}

message DeleteAddressResponse {
    bool success = 1;
}

message ListAddressRequest {
    int64 user_id = 1;
}

message ListAddressResponse {
    repeated Address address_list = 1;
}

// 钱包操作
message GetWalletBalanceRequest {
    int64 user_id = 1;
}

message GetWalletBalanceResponse {
    double balance = 1;
}

message RechargeWalletRequest {
    int64 user_id = 1;
    double amount = 2;
    string channel = 3;  // 充值渠道
}

message RechargeWalletResponse {
    string order_id = 1;
    double balance = 2;
}

message WithdrawWalletRequest {
    int64 user_id = 1;
    double amount = 2;
    string bank_card = 3;
}

message WithdrawWalletResponse {
    string order_id = 1;
    double balance = 2;
}